Contact page Alignment issue fixes

--- a/themes/roots-nextdatagov/assets/css/rei.css
+++ b/themes/roots-nextdatagov/assets/css/rei.css
@@ -984,7 +984,7 @@ a.faq-top {
 
     padding:10px;
 
-    margin-right:35px;
+    margin-right:40px;
     margin-top:30px;
     float:right;
     width:320px;
